fixed course description text alignment

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ ul {
     font-size: 12px;
     width: 240px;
     height: 135px;
+    text-align: left;
     display: none;
 }
 .course-cards button:hover > img {
